--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@
   </head>
   <body>
     <section class="container">
-      <div class="header">
-        <h1>Modern luxury <span class="emphasis">travel</span></h1>
-      </div>
-          <div class="preview baku">
-            <h1>Baku</h1>
-          </div>
-          <div class="preview london">
-            <h1>London</h1>
-          </div>
-          <div class="preview madrid">
-            <h1>Madrid</h1>
-          </div>
-          <div class="preview rome">
-            <h1>Rome</h1>
-          </div>
+        <h1 class="header">Modern luxury <span class="emphasis">travel</span></h1>
+        <div class="preview baku">
+          <h1>Baku</h1>
+        </div>
+        <div class="preview london">
+          <h1>London</h1>
+        </div>
+        <div class="preview madrid">
+          <h1>Madrid</h1>
+        </div>
+        <div class="preview rome">
+          <h1>Rome</h1>
+        </div>
     </section>
   </body>
 </html>
